--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,7 @@
             color: var(--text-primary);
         }
     </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
 </head>
 <body>
     <div class="dashboard-container">
